# mctk

./: .gitignore  README.md
backends/smithay/src/: lib.rs
backends/smithay/src/input/: keyboard.rs
backends/smithay/src/layer_shell/: layer_surface.rs  layer_window.rs
backends/smithay/src/session_lock/: lock_window.rs
backends/smithay/src/xdg_shell/: xdg_surface.rs  xdg_window.rs
camera/: Cargo.toml
camera/src/: camera.rs  errors.rs  lib.rs  types.rs
core/: Cargo.toml
core/src/: animations.rs  component.rs  context.rs  layout.rs  lib.rs  node.rs  style.rs  ui.rs  window.rs
core/src/renderables/: circle.rs  image.rs  mod.rs  raw_image.rs  rect.rs
core/src/renderer/: canvas.rs  mod.rs  svg.rs
core/src/widgets/: button.rs  div.rs  h_divider.rs  icon_button.rs  image.rs  mod.rs  radio_buttons.rs  rounded_rect.rs  scrollable.rs  slide_bar.rs  svg.rs  textbox.rs  toggle.rs  v_divider.rs
examples/animations/: Cargo.toml
examples/animations/src/: main.rs
examples/camera/: Cargo.toml
examples/camera/src/: camera.rs  main.rs
examples/carousel/src/: main.rs
examples/context/: Cargo.toml
examples/context/src/: main.rs
examples/context/src/contexts/: weather_api.rs
examples/hello-world/src/: main.rs
examples/homeassistant/: Cargo.toml
examples/homeassistant/src/: gui.rs  main.rs  wled.rs
examples/kitchen/: Cargo.toml
examples/kitchen/src/: gui.rs  main.rs
examples/kitchen/src/components/: mod.rs
examples/kitchen/src/components/buttons/: default.rs  link.rs  mod.rs  primary.rs  text.rs
examples/kitchen/src/components/radios/: default.rs
examples/kitchen/src/components/textboxes/: basic.rs  borderless.rs  filled.rs  mod.rs
examples/kitchen/src/pages/: buttons.rs  home.rs  icon_buttons.rs  mod.rs  radios.rs  scrollables.rs  slider_bars.rs  textboxes.rs  toggles.rs
examples/lock-screen/src/: main.rs
examples/svg/src/: main.rs
macros/src/: lib.rs
