[package]
name = "camera"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Akshay Raina <akshayr@mechasystems.com", "Shoaib Merchant <shoaibm@mechasystems.com>"]

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"]}
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
gstreamer-video = "0.23.2"
image = { version = "0.24.9", features = ["jpeg"] }
jpeg-decoder = "0.3.0"
lazy_static = "1.5.0"
mctk_core = { path = "../../core", version = "0.1.0" }
mctk_smithay = { path = "../../backends/smithay", version = "0.1.0" }
mctk_macros = { path = "../../macros", version = "0.1.0" }
mctk_camera = { path = "../../camera", version = "0.1.0" }
rand = "0.8.5"
regex = "1.7"
smithay-client-toolkit = "0.18.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
thiserror = "1.0"
tokio = { version = "1.33", features = ["full"] }
